--- a/style.css
+++ b/style.css
@@ -47,11 +47,12 @@ footer{
     font-size: 30px;
 }
 nav{
-    background-color: #e6e1e1;
-    border-radius: 10px;
-    margin: 10px;
-    padding: 15px;
-    text-transform: capitalize;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: inline-block;
+    background: #10a366;
+    color: white;
+    padding: 8px 12px;
+    margin: 5px;
+    border-radius: 5px
     
+
 }
