--- a/style.css
+++ b/style.css
@@ -47,12 +47,13 @@ footer{
     font-size: 30px;
 }
 nav{
-    display: inline-block;
-    background: #10a366;
-    color: white;
-    padding: 8px 12px;
-    margin: 5px;
-    border-radius: 5px
+    background-color: #e6e1e1;
+    border-radius: 10px;
+    margin: 10px;
+    padding: 15px;
+    text-transform: capitalize;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     
 
 }
+
