--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ footer{
     font-size: 30px;
 }
 nav{
-    background-color: #e6e1e1;
+    background-color: white;
     border-radius: 10px;
     margin: 10px;
     padding: 15px;
@@ -56,4 +56,5 @@ nav{
     
 
 }
+
 
