--- a/style.css
+++ b/style.css
@@ -56,8 +56,18 @@ nav{
     
 
 }
-    @media (max-width: 700px) {
-       
+    @media (min-width: 1024px) {
+
+    body {
+        max-width: 1200px;
+        margin: auto;
     }
+
+    header {
+        font-size: 22px;
+    }
+
+    }
+
 
 
