--- a/style.css
+++ b/style.css
@@ -56,7 +56,11 @@ nav{
     
 
 }
-
+.skill{
+    display:flex;
+    gap:20px;
+    flex-direction:column;
+}
 @media (max-width: 600px) {
 
     body {
@@ -101,6 +105,7 @@ nav{
     }
 }
    
+
 
 
 
