--- a/style.css
+++ b/style.css
@@ -58,6 +58,8 @@ nav{
 }
 .skill{
     display: flex;
+    padding: 20px;
+    justify-content: space-between;
     
 }
 @media (max-width: 600px) {
@@ -69,6 +71,7 @@ nav{
    
 }
    
+
 
 
 
