--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ nav{
 .skill{
     display: flex;
     padding: 20px;
-    justify-content: space-between;
+    background-color:  white;
     
 }
 @media (max-width: 600px) {
@@ -71,6 +71,7 @@ nav{
    
 }
    
+
 
 
 
