--- a/style.css
+++ b/style.css
@@ -57,13 +57,21 @@ nav{
 
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
+    header h1 {
+        font-size: 1.6rem;
+    }
 
-    body {
-        font-size: 15px;
+    .nav a {
+        display: inline-block;
+        margin: 5px;
+    }
+
+    section {
+        margin: 10px;
+        padding: 20px;
     }
 }
-   
 
 
 
